# mdwarf_contin

./: README.md  pyproject.toml
mdwarf_contin/: manipulate_spectra.py  normalize.py
mdwarf_contin/response_data/: pca_diff_spectra.pkl  pca_ivar.pkl  resp_PCA_results.npz
tests/: example_usage.ipynb
