[tool.poetry]
name = "mdwarf-contin"
version = "0.1.0"
description = ""
authors = ["imedan <ilija.medan@vanderbilt.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
alpha-shapes = "^1.1.0"
shapely = "^2.0.3"
localreg = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
